org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Relationship_invalid_relatedElement0.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLInvalidationTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
       	File {from ="/library.kernel/Occurrences.kerml"}
       	File {from ="/library.kernel/Objects.kerml"}
       	File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/BaseFunctions.kerml"}
		File {from ="/library.systems/Blocks.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
        		File {from ="/library.kernel/Occurrences.kerml"}
 		      	File {from ="/library.kernel/Objects.kerml"}
 		      	File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/BaseFunctions.kerml"}
				File {from ="/library.systems/Blocks.sysml"}
			}
		}
	}
END_SETUP 
*/
package BindingConnectorExample {
	block B0;
	block B1; 
	block V;
	part v : V {
		part b0 : B0 {
			port p0 {
				ref in myIn;
			}
		}
		part b1 : B1 {
			port p1 {
				ref out myOut;
			}
		}
		//* XPECT errors --- 
		"Relationships must have at least two related elements" at "b0::p0::myIn to b1::p1::myOut;"
		"mismatched input 'to' expecting '='" at "to"
		--- */
		bind b0::p0::myIn to b1::p1::myOut;
		
		
	} 
}